zag-poc/tests/diag/e0002_pure_io.expected
error[E0002]: capability violation — `@pure` constraint broken in function `bad_pure`
  --> tests/diag/e0002_pure_io.zag:5:1
   |
5 | fn bad_pure() void @pure {
   | ^^^^^^^^ effect occurs here
   = note: @pure functions must not perform heap allocation, IO, or lock acquisition
   = hint: remove the allocation/IO/lock, or remove the @pure annotation
