zag-poc/tests/diag/e0002_pure_io.zag
// E0002: @pure function must not do IO
// Uses print_str (IO effect = 4) which @pure forbids (bit 2 of 13)
extern fn print_str(s: []u8) void @io;

fn bad_pure() void @pure {
    print_str("hello");
}

fn main() i32 {
    return 0;
}
